--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
-    "@shopify/react-native-skia": "0.1.145",
+    "@shopify/react-native-skia": "0.1.143",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
@@ -18,6 +18,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-web": "~0.18.7",
     "typescript": "^4.6.3"
   },
