--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
   "name": "rn-skia-web",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "postinstall": "yarn setup-skia-web"
+    "postinstall": "yarn setup-skia-web && yarn plugin:build",
+    "plugin:build": "EXPO_NONINTERACTIVE=1 expo-module build plugin",
+    "plugin:watch": "expo-module build plugin",
+    "plugin:test": "expo-module test plugin",
+    "prebuild": "yarn plugin:build && expo prebuild"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "@shopify/react-native-skia": "0.1.148",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
-    "expo": "~46.0.9",
+    "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.10.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "expo-module-scripts": "^2.1.1",
+    "jest": "^29.1.2"
   },
   "private": true
 }
