--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-skia-web",
+  "name": "rn-expo-sandbox",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
@@ -18,20 +18,25 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.13",
+    "expo-router": "^0.0.29",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.10.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3",
-    "expo-splash-screen": "~0.16.2"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "expo-module-scripts": "^2.1.1",
     "jest": "^29.1.2"
   },
-  "private": true
+  "resolutions": {
+    "metro": "0.73.1"
+  }
 }
